add booking to consortium fee batch process