@@ -3,6 +3,7 @@ package com.utn.interactiveconsortium.batch.steps;
 import java.math.BigDecimal;
 import java.time.LocalDate;
 import java.util.List;
+import java.util.stream.Collectors;
 
 import org.springframework.batch.item.ItemProcessor;
 import org.springframework.stereotype.Component;
@@ -15,6 +16,7 @@ import com.utn.interactiveconsortium.entity.ConsortiumFeePeriodItemEntity;
 import com.utn.interactiveconsortium.entity.DepartmentEntity;
 import com.utn.interactiveconsortium.enums.EConsortiumFeePeriodStatus;
 import com.utn.interactiveconsortium.service.ConsortiumFeeConceptService;
+import com.utn.interactiveconsortium.service.ConsortiumFeePeriodService;
 
 import lombok.RequiredArgsConstructor;
 
@@ -23,6 +25,8 @@ import lombok.RequiredArgsConstructor;
 public class ConsortiumFeeProcessor implements ItemProcessor<ConsortiumFeePeriodEntity, ConsortiumFeeWrapper> {
 
    private final ConsortiumFeeConceptService consortiumFeeConceptService;
+
+   private final ConsortiumFeePeriodService consortiumFeePeriodService;
 
    @Override
    public ConsortiumFeeWrapper process(ConsortiumFeePeriodEntity consortiumFeePeriod) throws Exception {
@@ -36,10 +40,17 @@ public class ConsortiumFeeProcessor implements ItemProcessor<ConsortiumFeePeriod
 
       List<ConsortiumFeePeriodItemEntity> periodItems = generatePeriodConcepts(consortiumFeePeriod, consortiumFeeConcepts);
 
+      //Add bookings concepts
+      ConsortiumFeePeriodItemEntity bookingPeriodItem = consortiumFeePeriodService.createBookingConceptFor(consortiumFeePeriod);
+      periodItems.add(bookingPeriodItem);
+
+      //TODO Add adjustments concepts
+
       BigDecimal totalAmount = periodItems.stream()
             .map(periodItem -> getTotalAmountForConsortium(consortium, periodItem))
             .reduce(BigDecimal::add)
             .orElseThrow();
+
       consortiumFeePeriod.setTotalAmount(totalAmount);
 
       return new ConsortiumFeeWrapper(consortiumFeePeriod, periodItems);
@@ -65,7 +76,7 @@ public class ConsortiumFeeProcessor implements ItemProcessor<ConsortiumFeePeriod
                            .build();
                   }
             )
-            .toList();
+            .collect(Collectors.toList());
    }
 
    private BigDecimal getTotalAmountForConsortium(ConsortiumEntity consortium, ConsortiumFeePeriodItemEntity periodItem) {
@@ -73,9 +84,8 @@ public class ConsortiumFeeProcessor implements ItemProcessor<ConsortiumFeePeriod
       int totalActiveDepartments = consortium.getDepartments().stream().filter(DepartmentEntity::getActive).toList().size();
 
       return switch (periodItem.getDistributionType()) {
-         case EQUAL_SPLIT -> periodItem.getAmount();
          case PER_UNIT_FIXED -> periodItem.getAmount().multiply(BigDecimal.valueOf(totalActiveDepartments));
-         default -> BigDecimal.ZERO;
+         default -> periodItem.getAmount();
       };
    }
 }
